<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_my__options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cc.myandroid.likelive.ui.activity.MyActivityOptions">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:clickable="true"
        android:background="@color/colorWhite">
        <ImageView
            android:onClick="onClickBack"
            android:id="@+id/back_key"
            android:clickable="true"
            android:background="@drawable/background_color_change"
            android:layout_width="100px"
            android:layout_height="match_parent"
            android:src="@drawable/back_icon"
            android:layout_centerVertical="true"
            android:padding="15px"
            android:layout_marginLeft="@dimen/size_10"
            android:alpha="0.4"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:layout_centerInParent="true"
            android:textSize="@dimen/size_45"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/size_20"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:background="@color/colorWhite"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push_notifications"
            android:textSize="@dimen/size_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            />
        <com.alanapi.switchbutton.SwitchButton
            android:id="@+id/mSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/size_30"
            android:layout_centerVertical="true"
            android:checked="false"
            app:swTintColor="@color/colorGreen"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/user_suggest"
        android:layout_marginTop="4px"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:clickable="true"
        android:background="@drawable/background_color_change">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_suggest"
            android:textSize="@dimen/size_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/message"
        android:layout_marginTop="4px"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:clickable="true"
        android:background="@drawable/background_color_change">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="@dimen/size_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/update"
        android:layout_marginTop="4px"
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:clickable="true"
        android:background="@drawable/background_color_change">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="@dimen/size_30"
            android:layout_marginLeft="20px"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22px"
            android:id="@+id/textView" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/clear_away"
        android:layout_marginTop="@dimen/size_4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_120"
        android:clickable="true"
        android:background="@drawable/background_color_change">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_away"
            android:textSize="@dimen/size_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            />
        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="20M"
            android:textSize="@dimen/size_30"
            android:layout_marginRight="@dimen/size_30"
            />
    </RelativeLayout>
    <TextView
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/logout"
        android:id="@+id/tv_logout"
        android:layout_marginTop="@dimen/size_20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:clickable="true"/>

</LinearLayout>
