<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="@dimen/size_35"
        android:id="@+id/tv_focus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_90"
        android:text="@string/focus"
        android:gravity="center"
    />
    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:scaleType="fitStart"
            android:src="@mipmap/home_follow_login_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
        <Button
            android:id="@+id/btn_loginInFocus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80"
            android:background="@drawable/loginbutton"
            android:text="@string/login"
            android:textSize="@dimen/size_35"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/size_50"
            android:layout_marginRight="@dimen/size_50"
            android:layout_centerInParent="true"
        />
        <TextView
            android:id="@+id/tv_registInFocus"
            android:layout_marginTop="@dimen/size_40"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_60"
            android:textSize="@dimen/size_30"
            android:text="@string/registAccount"
            android:layout_below="@id/btn_loginInFocus"
            android:layout_centerHorizontal="true"
            android:textColor="#FF1493"
        />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
