<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_2"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:id="@+id/click_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:clickable="true"
        android:background="@drawable/background_color_change"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_35"
            android:text="@string/picture"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_2"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:id="@+id/click_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:clickable="true"
        android:background="@drawable/background_color_change"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_35"
            android:text="@string/camera"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_2"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:id="@+id/click_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:clickable="true"
        android:background="@drawable/background_color_change"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_35"
            android:text="@string/cancel"
            />
    </LinearLayout>

</LinearLayout>
